@@ -1,3 +1,10 @@
+2010-12-03  Richard Guenther  <rguenther@suse.de>
+
+	PR c/46745
+	* c-pretty-print.c (pp_c_postfix_expression): Handle MEM_REF.
+	(pp_c_unary_expression): Likewise.
+	(pp_c_expression): Likewise.
+
 2010-11-30  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* c-common.h (objc_finish_function): New.
